ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.0-rc17
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Execution
    • Fully Compatible
    • ALL
    • v8.0
    • QE 2024-08-05, QE 2024-08-19
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Nullptr exceptions in Collator destructors on x86 macos14.

      From alex.neben@mongodb.com patch builds related to SERVER-90993:
      https://spruce.mongodb.com/version/6699ef3441d032000798a418/tasks
      https://spruce.mongodb.com/version/6699eeabeb8050000702c3ca/tasks

      —

      7 failures were related segfaults, reading address values in the single digit range, up to 0x4 or so. I think it might be worth pinging the query team about their use of ICU. This could just be undefined behavior manifesting differently under libc++ or something (example).

      This destructor appear in the stack trace icu::RuleBasedCollator::~RuleBasedCollator

      Reaching out to Query for advice on these collator nullptr problems.
      https://mongodb.slack.com/archives/CKABWR2CT/p1721445165655699

            Assignee:
            Justin Seyster
            Reporter:
            Billy Donahue
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: