SERVER-92760 Turn off U_DISABLE_RENAMING libicu configuration option (#25542)

GitOrigin-RevId: b9fff14ebbb419dff6caab6f2cd61a33b5db3f2c