src/mongo/db/query/collation/collator_interface_icu.h
@@ -30,14 +30,11 @@
 #pragma once
 
 #include <memory>
+#include <unicode/coll.h>
 
 #include "mongo/base/string_data.h"
 #include "mongo/db/basic_types_gen.h"
 #include "mongo/db/query/collation/collator_interface.h"
-
-namespace icu {
-class Collator;
-}  // namespace icu
 
 namespace mongo {
 
